created Footer, History. add localStorage for cart and orders

--- a/src/Component/PageShop/BlockMenu/BlockMenu.module.scss
+++ b/src/Component/PageShop/BlockMenu/BlockMenu.module.scss
@@ -7,3 +7,9 @@
     box-sizing: border-box;
     justify-content: center;
 }
+
+@media screen and (max-width: 650px) {
+    .blockMenu {
+        width: 100%;
+    }    
+}
