--- a/src/Component/Header/Header.module.scss
+++ b/src/Component/Header/Header.module.scss
@@ -7,6 +7,10 @@
     align-items: center;
     padding: 0 30px;
     box-sizing: border-box;
+    position:fixed;
+    top:0;
+    width:100%;
+    z-index: 2;
 
     .wrapperLogo {
         width: 100%;
