--- a/src/Component/PageCart/Item.module.scss
+++ b/src/Component/PageCart/Item.module.scss
@@ -1,21 +1,43 @@
 .item {
     width: 80%;
+    max-width: 1000px;
+    height: 300px;
     display: flex;
-    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
     padding: 10px;
     gap: 20px;
+    align-items: center;
+    transition-duration: 0.7s;
+    transition-property: transform;
+
+    &:hover {
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px 5px rgba(3, 91, 143, 0.5);
+        transform: perspective(700px) translateZ(30px);
+    }
 
     .imageContainer {
         width: 300px;
-        height: 80%;
         overflow: hidden;
+        align-self: center;
         
         .image {
-            width: 100%;
             height: 100%;
+            width: 100%;
             object-fit: cover;
             object-position: center;
 
+        }
+    }
+    .blockDescription {
+        width: 50%;
+        .name {
+
+        }
+        .description {
+            font-weight: normal;
+            color:#85868b;
         }
     }
 
@@ -26,5 +48,9 @@
         .btn {
             cursor: pointer;
         }
+    }
+
+    .price {
+        white-space: nowrap;
     }
 }
