--- a/src/Component/PageCart/PageCart.module.scss
+++ b/src/Component/PageCart/PageCart.module.scss
@@ -4,62 +4,127 @@ $white:#ffffff;
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
 .wrapperCart {
+    background-color: rgba(255, 192, 203, 0.55);
     width: 100%;
     height: auto;
     display: flex;
+    flex-direction: column;
     gap: 20px;
     justify-content: center;
     align-items: center;
     font-family: 'Montserrat', sans-serif;
+    padding-top: 20px;
 
-    .rightContainer {
-        width: 30%;
-        display:flex;
-        height:600px;
-        background-color: $white;
-        justify-content:center;
+    .title {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         align-items:center;
+        width: 100%;
+    }    
 
-        .rightInnerContainer {
-            width:70%;
-            height:80%;
-            text-align:center;
+    .cartContent {
+        width: 100%;
+        height: auto;
+        display: flex;
+        gap: 20px;
+        justify-content: center;
+        align-items: center;
+        font-family: 'Montserrat', sans-serif;
+
+        .formContainer {
+            align-self: flex-start;
+            width: 30%;
+            display:flex;
+            height:550px;
+
+            justify-content:center;
+            align-items:center;
+
+
+            .formInnerContainer {
+                width:70%;
+                height:80%;
+                text-align:center;
+
+                .logoContainer {
+                    height: auto;
+                    width: 100%;
+                    margin-bottom: 20px;
             
-            .input {
-                background-color: #eee;
-                border: none;
-                padding: 12px 15px;
-                margin: 8px 0;
-                width: 100%;
-              font-size:0.8rem;
-            }
-
-            .input:focus {
-                outline:1px solid $teal;
-            }
-
-            .button {
-                border-radius: 20px;
-                border: 1px solid #00b4cf;
-                background-color: #00b4cf;
-                color: #FFFFFF;
-                font-size: 12px;
-                font-weight: bold;
-                padding: 12px 45px;
-                letter-spacing: 1px;
-                text-transform: uppercase;
-                transition: transform 80ms ease-in;
-                cursor:pointer;
-            }
+                    .logoImage {
+                        width: 100%;
+                        height: auto;
+                        object-fit: contain;
+                    }
+                }
             
-            .button:hover {
-              opacity:0.7;
+                .input {
+                    background-color: #eee;
+                    border: none;
+                    padding: 12px 15px;
+                    margin: 8px 0;
+                    width: 100%;
+                    font-size:0.8rem;
+                }
+
+                .input:focus {
+                    outline:1px solid $teal;
+                }
+
+                .button {
+                    border-radius: 20px;
+                    border: 1px solid #00b4cf;
+                    background-color: #00b4cf;
+                    color: #FFFFFF;
+                    font-size: 12px;
+                    font-weight: bold;
+                    padding: 12px 45px;
+                    letter-spacing: 1px;
+                    text-transform: uppercase;
+                    transition: transform 80ms ease-in;
+                    cursor:pointer;
+                }
+            
+                .button:hover {
+                    opacity:0.7;
+                }
+            }
+        }
+
+        .cart {
+            width: 70%;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+
+            .totalPrice {
+                margin-top: 10px;
+                padding: 10px;
+                text-align: center;
             }
         }
     }
 
-    .cart {
-        width: 70%;
-        // max-width: 1000px;
+    
+}
+
+@media (max-width: 910px) {
+    .cartContent {
+        width: 100%;
+        flex-direction: column-reverse;
+
+        .formContainer {
+            width: 100%;
+
+            .formInnerContainer {
+                width: 100%;
+            }
+        }
+
+        .cart {
+            width: 100%;
+        }
     }
 }
