--- a/src/Component/PageShop/BlockShops/BlockShops.module.scss
+++ b/src/Component/PageShop/BlockShops/BlockShops.module.scss
@@ -22,3 +22,11 @@
         }
     }
 }
+
+@media screen and (max-width: 650px) {
+    .blockShops {
+        width: 100%;
+        justify-content: center;
+        align-self: center;
+    }
+}
