--- a/src/Component/PageShop/Modal/Modal.css
+++ b/src/Component/PageShop/Modal/Modal.css
@@ -1,4 +1,5 @@
 .modal {
+    padding: 30px;
     height: 100vh;
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.5);
@@ -22,8 +23,10 @@
     padding: 20px;
     border-radius: 12px;
     background-color: white;
-    width: 30em;
+    width: 90%;
+    max-width: 1000px;
     height: auto;
+    max-height: 90%;
     transform: scale(0.5);
     transition: 0.4s all;
 }
@@ -31,4 +34,7 @@
 .modal__content.active {
     transform: scale(1);
     padding: 30px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
 }
