--- a/src/Component/PageShop/PageShop.module.scss
+++ b/src/Component/PageShop/PageShop.module.scss
@@ -11,16 +11,26 @@
     }
     
     .content {
-        display: flex;
         width: 100%;
+        display: flex;
         justify-content: center;
+        padding-top: 15px;
 
         .button {
-            writing-mode: vertical-rl;
+            padding: 10px;
+            width: 80%;
+            text-align: center;
+            border-radius: 10px;
+            border: 2px solid rgb(3, 91, 143);
+            background-color: white;
+            cursor: pointer;
         }
     }
 }
 
-@media (max-width: 1050px) {
-
+@media screen and (max-width: 650px) {
+    .content {
+        flex-direction: column;
+        align-items: center;
+    }
 }
