fixed Footer and PageCart changed request address to heroku

--- a/src/Component/Footer/Footer.module.scss
+++ b/src/Component/Footer/Footer.module.scss
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin-top: auto;
 
     .containerImage {
         width: 30%;
