--- a/src/Component/PageCart/History/AllOrders.module.scss
+++ b/src/Component/PageCart/History/AllOrders.module.scss
@@ -10,4 +10,10 @@
         width: 100%;
         padding: 10px;
     }
+
+    .emptyBlock {
+        width: 100%;
+        padding: 20px 0;
+        text-align: center;
+    }
 }
