--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .app {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
 }
