--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap');
+
 *{
   margin: 0;
   box-sizing: border-box;
+  font-family: 'Roboto Slab', serif;
 
   &::-webkit-scrollbar {
     width: 12px;
